--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "𝐈𝛕ᷟ‌𝚣⃪ꙴ ⋆‌⃝ᴅᴀʀᴋ𓃭 ⃟ǫᴜᴇᴇɴ⛦⃕‌༆",   
-    "logo": "https://telegra.ph/file/7493a1557d9f29e45bc77.jpg", 
+    "logo": "https://te.legra.ph/file/063bfeff0efdbd87fb103.jpg", 
     "keywords": [
     "python3",
     "telegram",
